--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             body {
                 font-family: Arial, sans-serif;
                 margin: 20px;
-                background-image:url('OI{P.jpeg');
+                background-image:url('IMG1.jpg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
