--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             }
             
             h1{
-                color: #ffffff;
+                color: #fff71a;
             }
             
             .topBar input[type=text] {
