--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             body {
                 font-family: Arial, sans-serif;
                 margin: 20px;
-                background-image:url('IMG4.jpg');
+                background-image:url('IMG5.jpg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -22,7 +22,7 @@
                 border-radius: 8px;
             }
             .creator{
-                color: white;
+                color: #fff71a;
                 font-size: 8px;
             }
             
