--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             }
             img {
                 border-radius: 8px;
+		border: 10px solid rgba(255,255,255,0);
             }
             .creator{
                 color: #fff71a;
