--- a/Kop_gewig.html
+++ b/Kop_gewig.html
@@ -10,7 +10,7 @@
             body {
                 font-family: Arial, sans-serif;
                 margin: 20px;
-                background-image:url('OI{P.jpeg');
+                background-image:url('IMG7.jpeg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -25,7 +25,7 @@
                 font-size: 20px;
             }
             h1{
-                color: #ffffff;
+                color: #fff71a;
             }
             
             #result{
@@ -180,7 +180,7 @@
         var a = parseFloat(document.getElementById('inputA').value);
         var b = parseFloat(document.getElementById('inputB').value);
         var c = parseFloat(document.getElementById('inputC').value);
-        var result = (a*b)*c/100; // Change this based on your computation
+        var result = (a*b)*c; // Change this based on your computation
         document.getElementById('result').innerHTML = 'Result: ' + result + ' Gram';
     }
 </script>
