--- a/Opbrengs.html
+++ b/Opbrengs.html
@@ -10,7 +10,7 @@
             body {
                 font-family: Arial, sans-serif;
                 margin: 20px;
-                background-image:url('OI{P.jpeg');
+                background-image:url('IMG7.jpeg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -26,7 +26,7 @@
                 font-size: 20px;
             }
             h1{
-                color: #ffffff;
+                color: #fff71a;
             }
             
             #result{
