--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <h1 align="center">Plante Stand & Opbrengs</h1>
 <div class="creator" align="center">Ontwikkel deur Coenie Reichel jr</div>
 
-<div class="imgMid" align="center"><img src="HEIF Image.jpeg" alt="VigorWear" height="180" width="280"></div>
+<div class="imgMid" align="center"><img src="HomeLogo.jpeg" alt="VigorWear" height="180" width="280"></div>
 
 <br><br><br><br><br><br><br><br><br>
 </body>
