--- a/Kop_gewig.html
+++ b/Kop_gewig.html
@@ -181,7 +181,7 @@
         var b = parseFloat(document.getElementById('inputB').value);
         var c = parseFloat(document.getElementById('inputC').value);
         var result = (a*b)*c; // Change this based on your computation
-        document.getElementById('result').innerHTML = 'Result: ' + result + ' Gram';
+        document.getElementById('result').innerHTML = 'Result: ' + result.toFixed(2) + ' Gram';
     }
 </script>
 </p>
