--- a/Opbrengs.html
+++ b/Opbrengs.html
@@ -180,7 +180,7 @@
         var b = parseFloat(document.getElementById('inputB').value);
         var c = parseFloat(document.getElementById('inputC').value);
         var result = (100/b)*(a*c)/100000; // Change this based on your computation
-        document.getElementById('result').innerHTML = 'Result: ' + result + ' Ton/ha';
+        document.getElementById('result').innerHTML = 'Result: ' + result.toFixed(2) + ' Ton/ha';
         
        
     }
