--- a/plant_spasiering.html
+++ b/plant_spasiering.html
@@ -179,7 +179,7 @@
         var x = parseFloat(document.getElementById('inputX').value);
         var y = parseFloat(document.getElementById('inputY').value);
         var result = (100*(100/y))/x*100; // Change this based on your computation
-        document.getElementById('result').innerHTML = 'Result: ' + result + ' cm';
+        document.getElementById('result').innerHTML = 'Result: ' + result.toFixed(2) + ' cm';
     }
 </script>
 </p>
