--- a/Opbrengs.html
+++ b/Opbrengs.html
@@ -14,7 +14,7 @@
                 background-image: url('IMG7.jpeg');
                 background-size: cover;
                 background-position: center;
-                background-repeat: no-repeat;
+                background-repeat: repeat;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -31,7 +31,7 @@
                 background-color: rgba(26, 38, 107, 0.8); /* Darker background for better visibility */
                 padding: 20px 0; /* Vertical padding */
                 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
-                position: relative; /* For positioning the gap */
+                position: fixed; /* For positioning the gap */
             }
 
             .topBar {
