--- a/Opbrengs.html
+++ b/Opbrengs.html
@@ -10,7 +10,7 @@
             body {
                 font-family: Arial, sans-serif;
                 margin: 0;
-                height: 100vh; /* Set height to fill the viewport */
+                height: 140vh; /* Set height to fill the viewport */
                 background-image: url('IMG7.jpeg');
                 background-size: cover;
                 background-position: center;
@@ -31,7 +31,7 @@
                 background-color: rgba(26, 38, 107, 0.8); /* Darker background for better visibility */
                 padding: 20px 0; /* Vertical padding */
                 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
-                position: fixed; /* For positioning the gap */
+                position: relative; /* For positioning the gap */
             }
 
             .topBar {
