--- a/homescreen2.html
+++ b/homescreen2.html
@@ -8,12 +8,12 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            min-height: 100vh; /* Changed from height to min-height */
+            min-height: 100vh;
             background-image: url('IMG7.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            background-attachment: fixed; /* Keeps background stable while scrolling */
+            background-attachment: fixed;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -23,54 +23,107 @@
 
         h1 {
             color: #eada22;
-            font-size: 36px;
+            font-size: 48px;
+            font-weight: bold;
             margin-top: 50px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
         }
 
         .container {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            max-width: 600px;
-            margin: 20px;
-            width: 90%; /* Ensures container fits smaller screens */
+            background: rgba(0, 0, 0, 0.85);
+            padding: 25px;
+            border-radius: 12px;
+            max-width: 700px;
+            margin: 25px;
+            width: 90%;
+            position: relative;
+            overflow: hidden; /* Hides slides outside the view */
         }
 
         img {
             border-radius: 8px;
             max-width: 100%;
             height: auto;
-            margin-top: 20px;
+            margin-top: 25px;
         }
 
-        p, label {
-            font-size: 18px;
-            line-height: 1.6;
-            margin: 10px 0;
+        p {
+            font-size: 24px;
+            font-weight: bold;
+            line-height: 1.8;
+            margin: 15px 0;
         }
 
-        .steps {
+        .slider {
+            display: flex;
+            transition: transform 0.5s ease; /* Smooth slide animation */
+            width: 100%;
+        }
+
+        .slide {
+            flex: 0 0 100%; /* Each slide takes full width */
+            padding: 10px;
             text-align: left;
-            margin-top: 20px;
+            box-sizing: border-box;
         }
 
-        .steps label {
+        .slide label {
+            font-size: 22px;
+            font-weight: 500;
+            line-height: 1.8;
+            margin-bottom: 20px;
             display: block;
-            margin-bottom: 15px;
         }
 
-        /* Adjusted media queries for iPad Air and iPhone 11-13 */
-        @media (max-width: 820px) { /* iPad Air width */
-            h1 { font-size: 32px; }
-            p, label { font-size: 16px; }
+        .slide strong {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .nav-buttons {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            transform: translateY(-50%);
+        }
+
+        .nav-buttons button {
+            background: rgba(255, 255, 255, 0.8);
+            border: none;
+            font-size: 24px;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .nav-buttons button:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
+        /* Media queries */
+        @media (max-width: 820px) { /* iPad Air */
+            h1 { font-size: 40px; }
+            p { font-size: 22px; }
+            .slide label { font-size: 20px; }
+            .slide strong { font-size: 22px; }
+            .container { margin: 20px; padding: 20px; }
+        }
+
+        @media (max-width: 414px) { /* iPhone 11-13 */
+            h1 { font-size: 34px; }
+            p { font-size: 20px; }
+            .slide label { font-size: 18px; }
+            .slide strong { font-size: 20px; }
             .container { margin: 15px; padding: 15px; }
-        }
-
-        @media (max-width: 414px) { /* iPhone 11-13 width */
-            h1 { font-size: 28px; }
-            p, label { font-size: 14px; }
-            .container { margin: 10px; padding: 10px; }
+            .nav-buttons button { font-size: 20px; width: 35px; height: 35px; }
         }
     </style>
 </head>
@@ -78,16 +131,77 @@
     <h1>Plante Stand & Opbrengs</h1>
     <div class="container">
         <img src="planteLogo.jpg" alt="Plante Logo" height="180" width="280">
-        <p>Volledige stappe om die app te installeer</p>
-        <div class="steps">
-            <label><strong>Stap 1:</strong> Gaan na jou iPhone se <em>Instellings</em> (Settings). Tik op jou profiel bo-aan (jou naam en foto, indien ingestel). Jou Apple ID e-posadres word daar vertoon (bv. "voorbeeld@icloud.com"). Skryf hierdie e-posadres neer via die verstrekte Word-dokument wat u ontvang het.</label>
-            <label><strong>Stap 2:</strong> Wag vir 'n TestFlight-uitnodiging. 'n E-pos sal gestuur word na die Apple ID e-posadres wat jy in Stap 1 verskaf het. Dit kan 'n paar minute of ure neem, afhangende van wanneer dit gestuur was, eerste "Release" datum #####.</label>
-            <label><strong>Stap 3:</strong> Gaan na die <em>Mail</em>-app op jou foon. Soek vir 'n e-pos van TestFlight in die inkassie van die Apple ID e-posadres. (Kontroleer ook die "Junk" of "Promosies" dopgehou as dit nie in die hoof inkassie is nie.)</label>
-            <label><strong>Stap 4:</strong> Maak die TestFlight-e-pos oop. Jy sal 'n skakel sien (gewoonlik "View in TestFlight" of iets soortgelyks). Tik op die skakel.</label>
-            <label><strong>Stap 5:</strong> Installeer TestFlight: As jy nog nie TestFlight op jou foon het nie, sal die skakel jou na die App Store neem. Laai TestFlight af (dit is gratis) en installeer dit.</label>
-            <label><strong>Stap 6:</strong> Meld aan by TestFlight: Maak TestFlight oop na installasie. Gebruik dieselfde Apple ID e-posadres en wagwoord waarmee jy in Stap 1 jou profiel nagegaan het om aan te meld.</label>
-            <label><strong>Stap 7:</strong> Laai die app af: In TestFlight, soek vir "Plante Stand" in die lys van beskikbare programme. Tik "Installeer" of "Aanvaar" om die app af te laai. Sodra dit klaar is, kan jy dit vanaf TestFlight oopmaak of op jou tuisskerm vind.</label>
+        <p>Volledige stappe om die app te installeer (skuif links/rechts)</p>
+        <div class="slider" id="slider">
+            <div class="slide">
+                <label><strong>Stap 1:</strong> Gaan na jou iPhone se <em>Instellings</em> (Settings). Tik op jou profiel bo-aan (jou naam en foto, indien ingestel). Jou Apple ID e-posadres word daar vertoon (bv. "voorbeeld@icloud.com"). Skryf hierdie e-posadres neer via die verstrekte Word-dokument wat u ontvang het.</label>
+            </div>
+            <div class="slide">
+                <label><strong>Stap 2:</strong> Wag vir 'n TestFlight-uitnodiging. 'n E-pos sal gestuur word na die Apple ID e-posadres wat jy in Stap 1 verskaf het. Dit kan 'n paar minute of ure neem, afhangende van wanneer dit gestuur was, eerste "Release" datum #####.</label>
+            </div>
+            <div class="slide">
+                <label><strong>Stap 3:</strong> Gaan na die <em>Mail</em>-app op jou foon. Soek vir 'n e-pos van TestFlight in die inkassie van die Apple ID e-posadres. (Kontroleer ook die "Junk" of "Promosies" dopgehou as dit nie in die hoof inkassie is nie.)</label>
+            </div>
+            <div class="slide">
+                <label><strong>Stap 4:</strong> Maak die TestFlight-e-pos oop. Jy sal 'n skakel sien (gewoonlik "View in TestFlight" of iets soortgelyks). Tik op die skakel.</label>
+            </div>
+            <div class="slide">
+                <label><strong>Stap 5:</strong> Installeer TestFlight: As jy nog nie TestFlight op jou foon het nie, sal die skakel jou na die App Store neem. Laai TestFlight af (dit is gratis) en installeer dit.</label>
+            </div>
+            <div class="slide">
+                <label><strong>Stap 6:</strong> Meld aan by TestFlight: Maak TestFlight oop na installasie. Gebruik dieselfde Apple ID e-posadres en wagwoord waarmee jy in Stap 1 jou profiel nagegaan het om aan te meld.</label>
+            </div>
+            <div class="slide">
+                <label><strong>Stap 7:</strong> Laai die app af: In TestFlight, soek vir "Plante Stand" in die lys van beskikbare programme. Tik "Installeer" of "Aanvaar" om die app af te laai. Sodra dit klaar is, kan jy dit vanaf TestFlight oopmaak of op jou tuisskerm vind.</label>
+            </div>
+        </div>
+        <div class="nav-buttons">
+            <button id="prevBtn" disabled>&larr;</button>
+            <button id="nextBtn">&rarr;</button>
         </div>
     </div>
+
+    <script>
+        const slider = document.getElementById('slider');
+        const prevBtn = document.getElementById('prevBtn');
+        const nextBtn = document.getElementById('nextBtn');
+        const slides = document.querySelectorAll('.slide');
+        let currentSlide = 0;
+
+        function updateButtons() {
+            prevBtn.disabled = currentSlide === 0;
+            nextBtn.disabled = currentSlide === slides.length - 1;
+        }
+
+        function goToSlide(index) {
+            currentSlide = Math.max(0, Math.min(index, slides.length - 1));
+            slider.style.transform = `translateX(-${currentSlide * 100}%)`;
+            updateButtons();
+        }
+
+        prevBtn.addEventListener('click', () => goToSlide(currentSlide - 1));
+        nextBtn.addEventListener('click', () => goToSlide(currentSlide + 1));
+
+        // Touch/swipe support for mobile devices
+        let touchStartX = 0;
+        let touchEndX = 0;
+
+        slider.addEventListener('touchstart', (e) => {
+            touchStartX = e.touches[0].clientX;
+        });
+
+        slider.addEventListener('touchmove', (e) => {
+            touchEndX = e.touches[0].clientX;
+        });
+
+        slider.addEventListener('touchend', () => {
+            const diff = touchStartX - touchEndX;
+            if (diff > 50) goToSlide(currentSlide + 1); // Swipe left
+            else if (diff < -50) goToSlide(currentSlide - 1); // Swipe right
+        });
+
+        // Initialize
+        goToSlide(0);
+    </script>
 </body>
 </html>
