--- a/homescreen2.html
+++ b/homescreen2.html
@@ -56,14 +56,14 @@
 
         .slider {
             display: flex;
-            width: 100%; /* Ensure slider takes full width */
+            width: 100%;
             transition: transform 0.5s ease;
         }
 
         .slide {
-            flex: 0 0 100%; /* Each slide is exactly 100% of container width */
-            min-width: 100%; /* Prevents shrinking */
-            padding: 20px; /* Consistent padding */
+            flex: 0 0 100%;
+            min-width: 100%;
+            padding: 20px;
             text-align: left;
             box-sizing: border-box;
         }
@@ -83,7 +83,7 @@
 
         .nav-buttons {
             position: absolute;
-            bottom: 10px; /* Moved to bottom to avoid text overlap */
+            bottom: 50px; /* Adjusted to make room for redirect button */
             left: 0;
             width: 100%;
             display: flex;
@@ -111,6 +111,23 @@
             cursor: not-allowed;
         }
 
+        .redirect-button {
+            margin-top: 60px; /* Space above button, below nav-buttons */
+            padding: 15px 30px;
+            font-size: 20px;
+            font-weight: bold;
+            color: #ffffff;
+            background-color: #eada22; /* Matches h1 color */
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .redirect-button:hover {
+            background-color: #d1c31f; /* Slightly darker on hover */
+        }
+
         /* Media queries */
         @media (max-width: 820px) { /* iPad Air */
             h1 { font-size: 40px; }
@@ -118,6 +135,7 @@
             .slide label { font-size: 20px; }
             .slide strong { font-size: 22px; }
             .container { margin: 20px; padding: 20px; }
+            .redirect-button { font-size: 18px; padding: 12px 25px; }
         }
 
         @media (max-width: 414px) { /* iPhone 11-13 */
@@ -126,6 +144,8 @@
             .slide label { font-size: 18px; }
             .slide strong { font-size: 20px; }
             .container { margin: 15px; padding: 15px; }
+            .nav-buttons { bottom: 45px; }
+            .redirect-button { font-size: 16px; padding: 10px 20px; margin-top: 50px; }
             .nav-buttons button { font-size: 20px; width: 35px; height: 35px; }
         }
     </style>
@@ -162,12 +182,14 @@
             <button id="prevBtn" disabled>←</button>
             <button id="nextBtn">→</button>
         </div>
+        <button class="redirect-button" id="redirectBtn">Gaan na Tuisblad</button>
     </div>
 
     <script>
         const slider = document.getElementById('slider');
         const prevBtn = document.getElementById('prevBtn');
         const nextBtn = document.getElementById('nextBtn');
+        const redirectBtn = document.getElementById('redirectBtn');
         const slides = document.querySelectorAll('.slide');
         let currentSlide = 0;
 
@@ -201,6 +223,11 @@
             const diff = touchStartX - touchEndX;
             if (diff > 50) goToSlide(currentSlide + 1); // Swipe left
             else if (diff < -50) goToSlide(currentSlide - 1); // Swipe right
+        });
+
+        // Redirect button functionality
+        redirectBtn.addEventListener('click', () => {
+            window.location.href = 'homescreen.html'; // Change this URL as needed
         });
 
         // Initialize
