--- a/homescreen2.html
+++ b/homescreen2.html
@@ -227,7 +227,7 @@
 
         // Redirect button functionality
         redirectBtn.addEventListener('click', () => {
-            window.location.href = 'homescreen.html'; // Change this URL as needed
+            window.location.href = 'homescreen1.html'; // Change this URL as needed
         });
 
         // Initialize
